# VoRF

./: .travis.yml  Makefile.am  README.md  configure.ac
bindings/python/: build.py  test.py  vorf.py
examples/: Makefile.am  mnist.c
inc/: Makefile.am  vorf.h
lib/: Makefile.am  vorf_forest.c  vorf_mapping.c  vorf_math.h  vorf_refinary.c  vorf_refinary.h  vorf_tree.c  vorf_tree.h  vorf_utils.c
src/: Makefile.am  accuracy.c  cardinality.c  global_safety.c  iospace.c  mappings.c  robustness.c  throughput.c
support/: collision_detection.sh  mnist.sh  train-sklearn.py
support/data/: mnist.verify.csv
